src/styles/buttons.scss
@import './transitions.scss';

button,
a[role='button'],
*[role='button'],
input[type='submit'] {
  padding: calc(var(--button-spacing) / 2) var(--button-spacing);
  border-radius: var(--border-radius);
  border: none;
  cursor: pointer;
  transition:
    background-color 0.3s ease-in-out,
    color 0.3s ease-in-out,
    outline 0.3s ease-in-out;
  text-decoration: none;

  &.primary {
    background-color: var(--color-accent);
    color: var(--color-black);

    &:hover,
    &:focus {
      outline: none;
      background-color: var(--color-dark-blue);
    }
  }

  &.secondary {
    background-color: var(--color-blue);
    color: var(--color-white);

    &:hover,
    &:focus {
      outline: none;
      background-color: var(--color-dark-blue);
      color: var(--color-white);
    }
  }

  &.ternary {
    background-color: var(--color-black);
    color: var(--color-white);

    &:hover,
    &:focus {
      outline: none;
      background-color: var(--color-accent);
      color: var(--color-black);
    }
  }

  &.transparent {
    background-color: transparent;
    color: var(--color-black);

    &:hover,
    &:focus {
      outline: none;
      background-color: var(--color-dark-blue);
    }
  }
}

